test/errors/asWithUseExcept.compopts
--detailed-errors # asWithUseExcept-detailed.good
--no-detailed-errors # asWithUseExcept-brief.good
